--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,278 @@
-.App {
-  text-align: center;
+/* header style */
+
+header{
+  width: 100%;
+  height: 100%;
+ 
+}
+nav{
+  background: var(--bg-light);
+  width: 100%;
+  z-index: 999;
+  height: 75px;
+  line-height: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav .wrapper{
+  width: 90%;
+  margin: auto;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  padding: 0 30px;
+}
+ 
+nav .wrapper .menu{
+  display: inline-flex;
+}
+nav .wrapper .menu li{
+  list-style: none;
+}
+nav .wrapper .logo a,
+nav .wrapper .menu li a{
+  color: var(--white);
+  text-decoration: none;
+ cursor: pointer;
+ letter-spacing: 1px;
+ text-transform: uppercase;
+ font-weight: var(--font-we-md);
+}
+nav .wrapper .menu li a{
+  padding:  10px 12px; 
+  transition: all 0.4s ease-in;
+}
+nav .wrapper .menu li a:hover{
+  background: var(--txt-dark);
+  color: #fff;
+}
+
+nav .wrapper .btn-responsive{
+  width: 50px;
+  height: 100%;
+ background: transparent;
+ border: none;
+ cursor: pointer;
+ display: none;
+}
+nav .wrapper .btn-responsive div{
+  height: 3px;
+  width: 100%;
+  background-color: #fff;
+  margin: 3px;
+}
+
+
+
+/* search Component */
+#home{
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+.container{
+  width: 100%;
+  height: 100vh;
+ 
+}
+.container .row{
+  width: 100%;
+  height: 100%;
+}
+#home .container .row{
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+#home .container .row .card{
+  /* border: 1px solid var(--dark); */
+   padding: 20px;
+   box-shadow: var(--shadow-light);
+   background-color: var(--white);
+   width: 40rem;
+   height: 250px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
+   gap: 10px;
+   z-index: inherit;
+}
+#home .container .row .card .card-body input{
+  padding: 10px;
+  font-size: 1.2rem;
+  outline: none ;
+  border: 1px solid var(--bg-light);
+}
+#home .container .row .card .card-body button{
+  padding: 10px 12px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  background-color: var(--bg-dark);
+  color: #fff;
+  border: 1px solid var(--bg-dark);
+
+}
+/*artist card css */
+
+.artist-card{
+  width: 80rem;
+  height: 100%;
+  margin: auto;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+}
+.artist-card .card-image{
+  height: 20rem;
+  width: 20rem;
+}
+.artist-card .card-image img{
+  max-height: 100%;
+  max-width: 100%;
+  border-radius: 10px;
+}
+.artist-card .card-body{
+  width: 30rem;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.artist-card .card-body h3{
+  font-size: 2rem;
+  color: var(--bg-dark);
+}
+.artist-card .card-body ul li{
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+}
+.artist-card .card-body .link{
+  display: flex;
+  align-items: center;
+  justify-content:center;
+
+}
+.artist-card .card-body .link a{
+  text-decoration: none;
+  padding: 8px 10px;
+  background-color: var(--bg-dark);
+  color: #fff;
+  cursor: pointer;
+}
+/*Tracks */
+.track-container{
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
+}
+.track-container .title{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.track-container .card-container{
+  width: 80%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+.track-container .card-container .song-card{
+   position: relative;
+   cursor: pointer;
+}
+.track-container .card-container .song-card .card-body{
+  position: absolute;
+  background-color: var(--bg-dark);
+  bottom: 0px;
+  width: 100%;
+  text-align: center;
+  color: #fff;
+}
+/* Audio Player */
+.audio-container{
+  background-color: var(--txt-light);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.audio-container .content{
+  display: flex;
+}
+.audio-container .content .audio-image{
+  height: 60px;
+  width: 60px;
+}
+.audio-container .content .audio-image img{
+  width: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: center;
+}
+.audio-container .content .audio-info{
+  color: var(--bg-dark);
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+
+
+@media screen  and (max-width: 996px) {
+  nav{
+    line-height: 75px;
   }
-  to {
-    transform: rotate(360deg);
+  nav .wrapper .btn-responsive{
+    display: block;
+    position: relative;
+  }
+  nav .wrapper .btn-responsive.active div{
+    position: absolute;
+  }
+  nav .wrapper .btn-responsive.active div:nth-child(1){
+    transform: rotate(45deg);
+  }
+  nav .wrapper .btn-responsive.active div:nth-child(2){
+    display: none;
+  }
+  
+  nav .wrapper .btn-responsive.active div:nth-child(3){
+    transform: rotate(-45deg);
+  }
+
+  nav .wrapper .menu{
+    display: none;
+  }
+  nav .wrapper .menu.responsive{
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 50px;
+    background: var(--md-dark);
+
+  }
+  #home .container .row .card .card-body .form-group{
+    display: flex;
+  }
+  .artist-card{
+    width: 90rem;
+    margin: auto;
+  }
+  .artist-card .card-body ul{
+    width: 80%;
+    margin: auto;
   }
 }
